--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,1 +1,46 @@
-/* Стилизация аккордеона */
+.accordion {
+    font-size: 16px;
+    line-height: 24px;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.accordion * {
+    font-family: ‘Inter’, sans-serif;
+}
+
+
+.accordion__summary {
+    color: var(--black);
+    margin-top: 24px;
+    margin-left: 32px;
+    margin-bottom: 24px;
+    list-style: none;
+}
+
+.accordion__summary::marker {
+    display: none;
+}
+
+.accordion__summary:hover {
+    cursor: pointer;
+}
+
+.accordion__content {
+    color: var(--grey-4);
+    margin: -8px 32px 32px 32px;
+}
+
+.accordion__item {
+    margin-bottom: 8px;
+    border: 1px solid var(--grey-3);
+    border-radius: 8px;
+    background: var(--white)
+}
+
+.accordion__item:last-child {
+    margin-bottom: 0;
+}
+
+
+
